<resources>
    <string name="app_name">"ITQuiz"</string>
    <string name="type_your_username"><font color="#FFB6C1">C:\\\\ITQuiz\\\\</font>Type_Your_Info:</string>
    <string name="type_your_password"><font color="#FFB6C1">C:\\\\Password:</font></string>
    <string name="app_logo_description">App Logo</string>
    <string name="done">Done</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="toast_username">Please Write Your Name</string>
    <string name="rules">Thank you for playing our IT quiz. \nAnswering the question correctly grants you 10 pts. For each badly answered question you will lose 10 pts. There is a 60sec timer on each question, failing to answer in given time will skip the questin and you will lose the points. Going back will end the quiz completely. You have a once-in-a-quiz chance to call someone or text someone to help you answer the question. \nTry not to cheat :)</string>
    <string name="enter_game">Enter</string>
    <string name="no_question">Choose Number of Questions</string>
    <string name="end_game">You have completed  the Quiz!</string>
    <string name="choose_next">Choose What Happens Next</string>
    <string name="about_page_tile">About</string>
    <string name="about_page_main">Let no one deceive you by any means; for that day will not come unless the falling away comes first, and the man of sin is revealed, the son of perdition, who opposes and exalts himself above all that is called God or that is worshipped, so that he sits as God in the temple of God, showing himself that he is God.</string>
    <string name="about_page_author">By Irhad Fejzic, Tarik Selimovic</string>
    <string name="your_corent_score">Your Current score:</string>
    <string name="question">Question</string>
    <string name="give_up">Give up</string>
    <string name="submit">submit</string>
    <string name="hard">Hard</string>
    <string name="normal">Normal</string>
    <string name="easy">Easy</string>
    <string name="shere">Share</string>
    <string name="play_agine">Play again</string>
    <string name="your_score">Your score:</string>
    <string name="joker">Joker:</string>
    <string name="seconds">Seconds:</string>
    <string name="need_help">Need Help!!</string>
    <string name="joker_used">Used</string>
    <string name="joker_not_used">Not Used</string>
    <string name="cant_use_for_image">You can\'t use it for this question!!</string>
    <string name="correct_questions">Correct questions:</string>
    <string-array name="questions_array">
        <item>3</item>
        <item>8</item>
        <item>12</item>
        <item>16</item>
        <item>20</item>
        <item>24</item>
        <item>28</item>
        <item>32</item>
    </string-array>
    <string name="choose_difficulty">Choose Quiz Difficulty   \n<font size="15">(Upon choosing, the game will start)</font></string>
    <string name="change_language_to_ba">Change Language To BA</string>
    <string name="rules_title">Rules</string>
    <string name="learn_about_python">Learn About Python</string>
    <string name="basic_concepts">Basic Concepts</string>
    <string name="our_other_products">Our Other Products</string>
    <string name="about_title">About Us</string>
    <string name="game_title">Game Menu</string>
    <string name="score_title">Score Menu</string>
    <string name="game_rules_title">Game Rules</string>
    <string name="question_no_title">"Question Number: "</string>
    <string name="by_us">By NIT</string>
    <string name="user_exists">User Already Exists. Password incorrect</string>
    <string name="password_incorrect">Password incorrect</string>
    <string name="mute_unmute_music">Mute/Unmute Music</string>
    <string name="check_highscores">Check Highscores</string>
    <string name="highscores_for_list">Highscores:</string>
    <string name="call_dialog"><font size="15" color="#ffffff">Get Help?</font></string>
    <string name="permission">Permission Denied</string>
    <string name="denied_permission">You denied the permission</string>
    <string name="not_correct_password">Incorrect Password</string>
    <string name="hard1">What is the output of the following code?</string>
    <string name="hard1_ans1">i is 5 isPrime is True</string>
    <string name="hard1_ans2">i is 5 isPrime is False</string>
    <string name="hard1_ans3">i is 6 isPrime is True</string>
    <string name="hard1_ans4">i is 6 isPrime is False</string>
    <string name="hard2">Suppose we have two sets A &#38; B, then A &#60; B is?</string>
    <string name="hard2_ans1">True if len(A) is less than len(B).</string>
    <string name="hard2_ans2">True if A is a proper subset of B.</string>
    <string name="hard2_ans3">True if the elements in A when compared are less than the elements in B.</string>
    <string name="hard2_ans4">True if A is a proper superset of B.</string>
    <string name="hard3">Which options are correct to create an empty set in Python?</string>
    <string name="hard3_ans1">{}</string>
    <string name="hard3_ans2">[]</string>
    <string name="hard3_ans3">()</string>
    <string name="hard3_ans4">set()</string>
    <string name="hard4">In python3 what does // operator do?</string>
    <string name="hard4_ans1">Float division</string>
    <string name="hard4_ans2">returns remainder</string>
    <string name="hard4_ans3">same as a**b</string>
    <string name="hard4_ans4">Integer division</string>
    <string name="hard5">What are the base cases in the following recursive function?</string>
    <string name="hard5_ans1">n>0</string>
    <string name="hard5_ans2">n&#60;=0</string>
    <string name="hard5_ans3">no base cases</string>
    <string name="hard5_ans4">n&#60;0</string>
    <string name="hard6">What is the output of the following code for print(f2(2, 0))?</string>
    <string name="hard6_ans1">0</string>
    <string name="hard6_ans2">1</string>
    <string name="hard6_ans3">2</string>
    <string name="hard6_ans4">3</string>
    <string name="hard7">What relationship is appropriate for Student and Person?</string>
    <string name="hard7_ans1">association</string>
    <string name="hard7_ans2">composition</string>
    <string name="hard7_ans3">inheritance</string>
    <string name="hard8">What method is used to return the length of array foo?</string>
    <string name="hard9">What methods are used to remove an element from an array?</string>
    <string name="hard9_ans1">remove()</string>
    <string name="hard9_ans2">pop()</string>
    <string name="hard9_ans3">delete()</string>
    <string name="hard9_ans4">clear() </string>
    <string name="hard10">What methods are used to join two existing sets in Python?</string>
    <string name="hard10_ans1">join()</string>
    <string name="hard10_ans2">add()</string>
    <string name="hard10_ans3">union()</string>
    <string name="hard10_ans4">update()</string>
    <string name="hard11">To convert a string to lowercase, what Python function can be used?</string>
    <string name="hard12">In what ways can we add values to a python array?</string>
    <string name="hard12_ans1">add()</string>
    <string name="hard12_ans2">extend()</string>
    <string name="hard12_ans3">insert(i,x)</string>
    <string name="hard12_ans4">join()</string>
    <string name="hard13">What is the difference between “is” and “==”?</string>
    <string name="hard13_ans1">is checks identity</string>
    <string name="hard13_ans2">== checks equality</string>
    <string name="hard13_ans3">they are the same</string>
    <string name="hard13_ans4">is checks strings</string>
    <string name="hard14">What is the output of this code?</string>
    <string name="hard14_ans1">array(‘d’, [1.1, 2.1, 3.1, 3.4])</string>
    <string name="hard14_ans2">array(‘d’, [1.1, 2.1, 3.1, 3.4, 4.5, 6.3, 6.8])</string>
    <string name="hard14_ans3">array(‘d’, [1.1, 2.1, 3.8, 3.1, 3.4, 4.5, 6.3, 6.8])</string>
    <string name="hard15">How will you convert a string S to a list in python?</string>
    <string name="hard16">What are Python packages?</string>
    <string name="hard16_ans1">namespaces containing modules</string>
    <string name="hard16_ans2">namespaces containing single module</string>
    <string name="hard16_ans3">helper function</string>
    <string name="medium1">Suppose a given list [1,2,3,4], what remains after list.pop(1) in Python?</string>
    <string name="medium1_ans1">[2,3,4]</string>
    <string name="medium1_ans2">[1,2,3]</string>
    <string name="medium1_ans3">[1,3,4]</string>
    <string name="medium2">What is the output of the following code?</string>
    <string name="medium2_ans1">[‘ab’, ‘cd’]</string>
    <string name="medium2_ans2">[‘AB’, ‘CD’]</string>
    <string name="medium2_ans3">[Ab, Cd]</string>
    <string name="medium3">Which of the following function is incorrect??</string>
    <string name="medium3_ans1">range(0, 3.5)</string>
    <string name="medium3_ans2">range(10, 4, -1)</string>
    <string name="medium3_ans3">range(1, 3, 1)</string>
    <string name="medium3_ans4">range(2.5, 4.5)</string>
    <string name="medium4">Can Python functions return multiple variables?</string>
    <string name="medium5">What is the output of the following code?</string>
    <string name="medium5_ans1">Hello foo and bin</string>
    <string name="medium5_ans2">Hello {name1} and {name2}</string>
    <string name="medium5_ans3">Error</string>
    <string name="medium5_ans4">Hello and</string>
    <string name="medium6">Write different ways to initialize an empty list in Python?</string>
    <string name="medium7">What types can a split() function split?</string>
    <string name="medium8">How would you convert hexadecimal "A" to int using int() function in Python? (without spaces)</string>
    <string name="medium9">What is the number of iterations in the following loop:</string>
    <string name="medium9_ans1">2*n</string>
    <string name="medium9_ans2">n</string>
    <string name="medium9_ans3">n+1</string>
    <string name="medium9_ans4">n-1</string>
    <string name="medium10">How will you randomize the items of a list LST in place?</string>
    <string name="medium11">How will you capitalizes first letter of string?</string>
    <string name="medium11_ans1">upper()</string>
    <string name="medium11_ans2">capitalize()</string>
    <string name="medium11_ans3">capitalizeLetter()</string>
    <string name="medium11_ans4">capitalizeFirstLetter()</string>
    <string name="medium12">How will you convert a string to all uppercase?</string>
    <string name="medium13">How will you compare two lists in Python?</string>
    <string name="medium13_ans1">compare(list1, list2)</string>
    <string name="medium13_ans2">cmp(list1, list2)</string>
    <string name="medium13_ans3">list1 == list2</string>
    <string name="medium13_ans4">list1.returnAll(list2)</string>
    <string name="medium14">What is the output of the folowing code?</string>
    <string name="medium14_ans1">LEARN PYTHON</string>
    <string name="medium14_ans2">learn python</string>
    <string name="medium14_ans3">lEAN pYTHON</string>
    <string name="medium14_ans4">Learn Python</string>
    <string name="medium15">What is the result of multiplying the string ‘cat’ by 3.?</string>
    <string name="medium15_ans1">cat3</string>
    <string name="medium15_ans2">ERROR</string>
    <string name="medium15_ans3">catcatcat</string>
    <string name="medium15_ans4">None of the above</string>
    <string name="medium16">What is the result of multiplying a list [1,2] by 3?</string>
    <string name="medium16_ans1">[1,2,1,2]</string>
    <string name="medium16_ans2">[1,2,3]</string>
    <string name="medium16_ans3">ERROR</string>
    <string name="medium16_ans4">[2,6]</string>
    <string name="easy1">Is python case sensitive?</string>
    <string name="easy1_ans1">Yes</string>
    <string name="easy1_ans2">No</string>
    <string name="easy2">What is type conversion for ord() in Python?</string>
</resources>