<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/app_logo_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_logo"
            android:contentDescription="@string/app_logo_description"
            app:srcCompat="@drawable/app_logo" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@android:color/transparent" />

        <TextView
            android:id="@+id/username_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/username_pt"
            android:text="@string/type_your_username"
            style="@style/quiz_header" />

        <EditText
            android:id="@+id/username_pt"
            style="@android:style/Widget.DeviceDefault.Light.EditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="username"
            android:background="@drawable/rectangle"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="4dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/username_btn"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorAccent"
            android:fontFamily="@font/press_start_2p"
            android:text="@string/done"
            android:textColor="@android:color/white" />

    </LinearLayout>

</layout>