<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:id="@+id/current_score_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_corent_score"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/score_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="320dp"
                    android:layout_height="106dp"
                    android:background="@drawable/rectangle">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center"
                        tools:layout_editor_absoluteX="91dp"
                        tools:layout_editor_absoluteY="0dp">


                        <TextView
                            android:id="@+id/question_text"
                            style="@style/quiz_header"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="8dp"
                            android:text="@string/question"
                            android:textColor="@color/colorAccent"

                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/answer_text"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle"
                    android:ems="10"
                    android:hint=">"
                    android:inputType="textPersonName"
                    android:padding="6dp"
                    android:shadowColor="#E91E63"
                    android:textColor="#FFB6C1"
                    android:textColorHint="@color/colorAccent"
                    android:textCursorDrawable="@drawable/text_cursor_cmd"
                    android:visibility="invisible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:layout_weight="1"
                    android:src="@drawable/app_logo"
                    android:visibility="invisible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/radio_groupA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/answerA_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimaryDark"
                            android:buttonTint="#FFC107"
                            android:fontFamily="@font/vt323"
                            android:text="Answer1"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp"
                            android:visibility="invisible" />
                    </RadioGroup>

                    <RadioGroup
                        android:id="@+id/radio_groupB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/answerB_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimaryDark"
                            android:buttonTint="#FFC107"
                            android:fontFamily="@font/vt323"
                            android:text="Answer2"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp"
                            android:visibility="invisible" />
                    </RadioGroup>

                    <RadioGroup
                        android:id="@+id/radio_groupC"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/answerC_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimaryDark"
                            android:buttonTint="#FFC107"
                            android:fontFamily="@font/vt323"
                            android:text="Answer3"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp"
                            android:visibility="invisible" />
                    </RadioGroup>

                    <RadioGroup
                        android:id="@+id/radio_groupD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true">

                        <RadioButton
                            android:id="@+id/answerD_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimaryDark"
                            android:buttonTint="#FFC107"
                            android:fontFamily="@font/vt323"
                            android:text="Answer4"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp"
                            android:visibility="invisible" />

                    </RadioGroup>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/givup_btn"
                style="@style/yellow_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/give_up" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/submit_btn"
                style="@style/yellow_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>
</layout>